syntax = "proto3";

package common.protobuf;

//登陆
message CSLogin {
	string account = 1;
	string password = 2;
	bool is_login = 3;
}

//登陆返回
message SCLogin {
	int32 result_code = 1;
	string login_key = 2;
}

//重连
message CSReconnect{
	int32 player_id = 1;
	string login_key = 2;
}

//重连返回
message SCReconnect{
	int32 result_code = 1;
}

//心跳
message CSHeartBeat{
	
}

//心跳返回
message SCHeartBeat{
	
}

//提示信息返回
message SCNotice{
	int32 notice_code = 1;
	repeated string param = 2;
}
